# haskell-xmpp

./: network-protocol-xmpp.cabal
Network/Protocol/: XMPP.hs
Network/Protocol/XMPP/: Authentication.hs  Client.hs  Component.hs  Connection.hs  Connections.hs  ErrorT.hs  Features.hs  Handle.hs  JID.hs  Monad.hs  Stanza.hs  Stream.hs  XML.hs
Network/Protocol/XMPP/Client/: Authentication.hs  Features.hs
Network/Protocol/XMPP/Internal/: Authentication.hs  Connections.hs  Features.hs  Handle.hs  Stanza.hs  Stream.hs  XML.hs
examples/: echo.hs
lib/Network/Protocol/: XMPP.hs
lib/Network/Protocol/XMPP/: Component.hs  Connections.hs  ErrorT.hs  Handle.hs  Monad.hs  Stanza.hs  XML.hs
lib/Network/Protocol/XMPP/Client/: Authentication.hs
