name: network-protocol-xmpp
version: 0.2
synopsis: Client <-> Server communication over XMPP
license: GPL
license-file: License.txt
author: John Millikin <jmillikin@gmail.com>
        Stephan Maka  <stephan@spaceboyz.net>
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.6
category: Network
stability: experimental
bug-reports: mailto:jmillikin@gmail.com

source-repository head
  type: darcs
  location: http://ianen.org/haskell/xmpp/

library
  build-depends:
      base >=3 && < 5
    , text
    , stringprep
    , ranges

  exposed-modules:
    -- Network.Protocol.XMPP
    -- Network.Protocol.XMPP.Client
    Network.Protocol.XMPP.JID
    -- Network.Protocol.XMPP.SASL
    -- Network.Protocol.XMPP.Stanzas
    -- Network.Protocol.XMPP.Stream
    -- Network.Protocol.XMPP.Util
