name: network-protocol-xmpp
version: 0.3
synopsis: Client <-> Server communication over XMPP
license: GPL
license-file: License.txt
author: John Millikin <jmillikin@gmail.com>
        Stephan Maka  <stephan@spaceboyz.net>
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.6
category: Network
stability: experimental
bug-reports: mailto:jmillikin@gmail.com

source-repository head
  type: darcs
  location: http://ianen.org/haskell/xmpp/

library
  ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
      base >=3 && < 5
    , text
    , stringprep
    , ranges
    , hxt
    , hsgnutls
    , bytestring
    , libxml-sax
    , gsasl

  exposed-modules:
    Network.Protocol.XMPP
    -- Network.Protocol.XMPP.Client
    Network.Protocol.XMPP.JID
    Network.Protocol.XMPP.Stanza
    Network.Protocol.XMPP.Stream

  other-modules:
    Network.Protocol.XMPP.Internal.Authentication
    Network.Protocol.XMPP.Internal.Handle
    Network.Protocol.XMPP.Internal.Stanza
    Network.Protocol.XMPP.Internal.Stream
    Network.Protocol.XMPP.Internal.XML
