name: network-protocol-xmpp
version: 0.3
synopsis: Client <-> Server communication over XMPP
license: GPL
license-file: License.txt
author: John Millikin <jmillikin@gmail.com>
        Stephan Maka  <stephan@spaceboyz.net>
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.6
category: Network
stability: experimental
bug-reports: mailto:jmillikin@gmail.com

source-repository head
  type: darcs
  location: http://ianen.org/haskell/xmpp/

library
  ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
      base >=3 && < 5
    , text >= 0.7 && < 0.8
    , stringprep >= 0.1.2 && < 0.2
    , ranges >= 0.2.2 && < 0.3
    , hxt >= 8.5 && < 8.6
    , hsgnutls >= 0.2 && < 0.3
    , bytestring >= 0.9 && < 1.0
    , libxml-sax >= 0.3 && < 0.4
    , gsasl >= 0.2 && < 0.3
    , network >= 2.2 && < 2.3

  exposed-modules:
    Network.Protocol.XMPP
    Network.Protocol.XMPP.Client
    Network.Protocol.XMPP.JID
    Network.Protocol.XMPP.Stanza
    Network.Protocol.XMPP.Stream

  other-modules:
    Network.Protocol.XMPP.Internal.Authentication
    Network.Protocol.XMPP.Internal.Features
    Network.Protocol.XMPP.Internal.Handle
    Network.Protocol.XMPP.Internal.Stanza
    Network.Protocol.XMPP.Internal.Stream
    Network.Protocol.XMPP.Internal.XML
